fixed nullpointer exceptions - using testresult as main return type from runTests will enable us to capture errors from test runs - display errors at the end of the summary